Fixed spacing on text inputs

--- a/styles/login.css
+++ b/styles/login.css
@@ -57,7 +57,7 @@ body {
 
 .input-field {
     width: 100%;
-    margin: 0 5px; 
+    padding: 0 5px; 
 }
 
 .input__links {
